<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".DisplaySelectedRecipeActivity">

    <LinearLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/recipe_toolbar"
            layout="@layout/recipe_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="50dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/recipe_toolbar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="100dp"
                    android:layout_height="108dp"
                    app:srcCompat="@drawable/ic_default_image" />

                <ImageButton
                    android:id="@+id/recipe_favorite_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@android:color/transparent"
                    android:onClick="onDisplaySelectedRecipeFavoriteButtonPressed"
                    app:srcCompat="@drawable/ic_favorite_outline" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/text_recipe_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Recipe Name"
                        android:textColor="?attr/primaryTextColor"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/recipe_image"
                        app:layout_constraintTop_toBottomOf="@id/recipe_toolbar" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_yields"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/primaryTextColor"
                            android:layout_marginTop="16dp"
                            android:text="Yields" />

                        <TextView
                            android:id="@+id/recipe_servings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/primaryTextColor"
                            android:layout_marginTop="16dp"
                            android:text="x Servings" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".35" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_prep_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textColor="?attr/primaryTextColor"
                            android:text="Prep Time" />

                        <TextView
                            android:id="@+id/recipe_prep_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textColor="?attr/primaryTextColor"
                            android:text="x min" />
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".35" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textColor="?attr/primaryTextColor"
                            android:text="Total Time" />

                        <TextView
                            android:id="@+id/recipe_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:textColor="?attr/primaryTextColor"
                            android:text="x min" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight=".3" />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".25" />
        </LinearLayout>

        <TextView
            android:id="@+id/ingredient_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/royal_blue"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/ingredients"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/display_recipe_list_items"/>

        <TextView
            android:id="@+id/direction_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/royal_blue"
            android:gravity="center"
            android:text="@string/directions"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/direction_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/display_recipe_list_items"/>




    </LinearLayout>

</androidx.core.widget.NestedScrollView>