...
    <string name="directions">Directions</string>
    <string name="add_direction">Add Direction</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="recipes">Recipes</string>
    <string name="okay">Okay</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="delete_recipe">Delete Recipe</string>
...
    <string name="enter_direction">Enter Direction</string>
    <string name="prep_time_min">Prep Time (minutes)</string>
    <string name="total_time_min">Total Time (minutes)</string>
    <string name="upload_image">Upload Image</string>
    <string name="scale_recipe">Scale Recipe</string>
    <string name="present_recipe">Present Recipe</string>
    <string name="convert_units">Convert Units</string>
    <string name="old_unit">Old Unit</string>
    <string name="new_unit">New Unit</string>
    <string name="delete_recipe_conformation">Are you sure you want to delete this recipe?</string>

    <string-array name="units_array">
        <item>teaspoon(s)</item>
...
