...
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/new_unit"
        android:textColor="?attr/primaryTextColor"/>

    <Spinner
        android:id="@+id/unit_conversion_popup_new_unit_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        android:popupBackground="?attr/spinnerColor"
        android:background="?attr/spinnerColor"/>

    <Button
        android:id="@+id/unit_conversion_popup_okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:text="@string/okay"
        android:onClick="onUnitConversionPopupOkayButtonPressed"
...
