...
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/edit_recipe_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onEditRecipeImagePressed"
            app:srcCompat="@drawable/upload_image" />

...
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/edit_recipe_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onEditRecipeNextButtonPressed"
                android:tint="@color/black"
...
